--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="outer-container">
         <div id="home">
+            <div id="logo">The Ink Spot</div>
+            <iframe src="../images/online-bookstore.jpg" frameborder="0"></iframe>
         </div>
         <div id="navbar"></div>
         <div id="sections">
