Creating 'flex' class and giving basic dimensions to logo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <div class="outer-container">
-        <div id="home">
+        <div id="home" class="flex">
             <div id="logo">The Ink Spot</div>
-            <iframe src="../images/online-bookstore.jpg" frameborder="0"></iframe>
+            <img src="../images/logo.jpg" frameborder="0"></iframe>
         </div>
         <div id="navbar"></div>
         <div id="sections">
