Linking spreadsheet and making image and text come horizontally. Also some minor changes.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Book Store</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div class="outer-container">
         <div id="home" class="flex">
-            <div id="logo">The Ink Spot</div>
+            <div id="logo" class="border flex">The Ink Spot</div>
             <img src="../images/logo.jpg" frameborder="0"></iframe>
         </div>
         <div id="navbar"></div>
