--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="outer-container">
         <div id="home" class="flex">
-            <div id="logo" class="border flex">The Ink Spot</div>
+            <div id="logo" class="border border-radius flex">The Ink Spot</div>
             <img src="../images/logo.jpg" frameborder="0"></iframe>
         </div>
         <div id="navbar"></div>
