--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <div class="outer-container">
         <div id="home" class="flex">
             <div id="logo" class="border border-radius flex">The Ink Spot</div>
-            <img src="../images/logo.jpg" frameborder="0"></iframe>
+            <img id="logo-picture" class="border border-radius" src="../images/logo.jpg" frameborder="0"></iframe>
         </div>
         <div id="navbar"></div>
         <div id="sections">
