--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,12 @@
             <div id="logo" class="border border-radius flex">The Ink Spot</div>
             <img id="logo-picture" class="border border-radius" src="../images/logo.jpg" frameborder="0"></iframe>
         </div>
-        <div id="navbar"></div>
+        <div id="navbar">
+            <div class="nav-elem">Log In</div>
+            <div class="nav-elem">Catalogue Page</div>
+            <div class="nav-elem">Registration</div>
+            <div class="nav-elem">About Us</div>
+        </div>
         <div id="sections">
             <div></div>
             <div></div>
