--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,10 @@
             <img id="logo-picture" class="border border-radius" src="../images/logo.jpg" frameborder="0"></iframe>
         </div>
         <div id="navbar" class="flex">
-            <div class="nav-elem">Log In</div>
-            <div class="nav-elem">Catalogue Page</div>
-            <div class="nav-elem">Registration</div>
-            <div class="nav-elem">About Us</div>
+            <div class="nav-elem flex border-radius">Log In</div>
+            <div class="nav-elem flex border-radius">Catalogue Page</div>
+            <div class="nav-elem flex border-radius">Registration</div>
+            <div class="nav-elem flex border-radius">About Us</div>
         </div>
         <div id="sections">
             <div></div>
