--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,10 +16,18 @@
             <img id="logo-picture" class="border border-radius" src="../images/logo.jpg" frameborder="0"></iframe>
         </div>
         <div id="navbar" class="flex">
-            <div class="nav-elem flex border-radius text-shadow">Log In</div>
-            <div class="nav-elem flex border-radius text-shadow">Catalogue Page</div>
-            <div class="nav-elem flex border-radius text-shadow">Registration</div>
-            <div class="nav-elem flex border-radius text-shadow">About Us</div>
+            <div class="nav-elem flex border-radius text-shadow"><a href="" target="_blank">
+                    Log In</a>
+            </div>
+            <div class="nav-elem flex border-radius text-shadow"><a href="" target="_blank">
+                    Catalogue Page</a>
+            </div>
+            <div class="nav-elem flex border-radius text-shadow"><a href="" target="_blank">
+                    Registration </a>
+            </div>
+            <div class="nav-elem flex border-radius text-shadow"><a href="" target="_blank">
+                    About Us</a>
+            </div>
         </div>
         <div id="sections">
             <div></div>
