Aligning the login bar horizontically and adding background color

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
             <div id="logo" class="border border-radius flex">The Ink Spot</div>
             <img id="logo-picture" class="border border-radius" src="../images/logo.jpg" frameborder="0"></iframe>
         </div>
-        <div id="navbar" class="flex">
+        <div id="inner-container" class="flex">
             <div class="nav-elem flex border-radius text-shadow"><a href="./Pages/Login/login.html" target="_blank">
                     Log In</a>
             </div>
