--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,9 +32,16 @@
             </div>
         </div>
         <div id="sections">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div id="genre">
+                <div id="romance"></div>
+                <div id="action"></div>
+                <div id="fantasy"></div>
+                <div id="sci-fi"></div>
+                <div id="slice"></div>
+                <div id="biogr"></div>
+            </div>
+            <div id="author-fav"></div>
+            <div id="top"></div>
         </div>
     </div>
 </body>
