Deciding structure to add for genres

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,12 +33,42 @@
         </div>
         <div id="sections">
             <div id="genre">
-                <div id="romance"></div>
-                <div id="action"></div>
-                <div id="fantasy"></div>
-                <div id="sci-fi"></div>
-                <div id="slice"></div>
-                <div id="biogr"></div>
+                <div id="romance">
+                    <div class="genre-image">
+                        <img src="" alt="">
+                    </div>
+                    <p></p>
+                </div>
+                <div id="action">
+                    <div class="genre-image">
+                        <img src="" alt="">
+                    </div>
+                    <p></p>
+                </div>
+                <div id="fantasy">
+                    <div class="genre-image">
+                        <img src="" alt="">
+                    </div>
+                    <p></p>
+                </div>
+                <div id="sci-fi">
+                    <div class="genre-image">
+                        <img src="" alt="">
+                    </div>
+                    <p></p>
+                </div>
+                <div id="slice">
+                    <div class="genre-image">
+                        <img src="" alt="">
+                    </div>
+                    <p></p>
+                </div>
+                <div id="biogr">
+                    <div class="genre-image">
+                        <img src="" alt="">
+                    </div>
+                    <p></p>
+                </div>
             </div>
             <div id="author-fav"></div>
             <div id="top"></div>
