Linking images to genres

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,39 +35,39 @@
             <div id="genre">
                 <div id="romance">
                     <div class="genre-image">
-                        <img src="" alt="">
+                        <img src="../images/romance.jpg" alt="romance">
                     </div>
-                    <p></p>
+                    <p>Romance</p>
                 </div>
                 <div id="action">
                     <div class="genre-image">
-                        <img src="" alt="">
+                        <img src="../images/action.jpg" alt="action">
                     </div>
-                    <p></p>
+                    <p>Action</p>
                 </div>
                 <div id="fantasy">
                     <div class="genre-image">
-                        <img src="" alt="">
+                        <img src="../images/fantasy.jpg" alt="fantasy">
                     </div>
-                    <p></p>
+                    <p>Fantasy</p>
                 </div>
                 <div id="sci-fi">
                     <div class="genre-image">
-                        <img src="" alt="">
+                        <img src="../images/sc-fi.jpg" alt="sci-fi">
                     </div>
-                    <p></p>
+                    <p>Sci-Fi</p>
                 </div>
                 <div id="slice">
                     <div class="genre-image">
-                        <img src="" alt="">
+                        <img src="../images/slice-life.jpg" alt="slice-of-life">
                     </div>
-                    <p></p>
+                    <p>Slice Of Life</p>
                 </div>
                 <div id="biogr">
                     <div class="genre-image">
-                        <img src="" alt="">
+                        <img src="../images/biography.jpg" alt="biography">
                     </div>
-                    <p></p>
+                    <p>Biography</p>
                 </div>
             </div>
             <div id="author-fav"></div>
