--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,37 +35,37 @@
             <div id="genre">
                 <div id="romance">
                     <div class="genre-image">
-                        <img src="../images/romance.jpg" alt="romance">
+                        <img src="../images/romance.jpg" alt="romance" class="border border-radius">
                     </div>
                     <p>Romance</p>
                 </div>
                 <div id="action">
                     <div class="genre-image">
-                        <img src="../images/action.jpg" alt="action">
+                        <img src="../images/action.jpg" alt="action" class="border border-radius">
                     </div>
                     <p>Action</p>
                 </div>
                 <div id="fantasy">
                     <div class="genre-image">
-                        <img src="../images/fantasy.jpg" alt="fantasy">
+                        <img src="../images/fantasy.jpg" alt="fantasy" class="border border-radius">
                     </div>
                     <p>Fantasy</p>
                 </div>
                 <div id="sci-fi">
                     <div class="genre-image">
-                        <img src="../images/sc-fi.jpg" alt="sci-fi">
+                        <img src="../images/sc-fi.jpg" alt="sci-fi" class="border border-radius">
                     </div>
                     <p>Sci-Fi</p>
                 </div>
                 <div id="slice">
                     <div class="genre-image">
-                        <img src="../images/slice-life.jpg" alt="slice-of-life">
+                        <img src="../images/slice-life.jpg" alt="slice-of-life" class="border border-radius">
                     </div>
                     <p>Slice Of Life</p>
                 </div>
                 <div id="biogr">
                     <div class="genre-image">
-                        <img src="../images/biography.jpg" alt="biography">
+                        <img src="../images/biography.jpg" alt="biography" class="border border-radius">
                     </div>
                     <p>Biography</p>
                 </div>
