Creating genre cards and heading

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,38 +32,39 @@
             </div>
         </div>
         <div id="sections">
-            <div id="genre">
-                <div id="romance">
+            <p class="text-shadow border heading">Genres: </p>
+            <div id="genre" class="flex flex-wrap">
+                <div id="romance" class="border border-radius genre">
                     <div class="genre-image">
                         <img src="../images/romance.jpg" alt="romance" class="border border-radius">
                     </div>
                     <p>Romance</p>
                 </div>
-                <div id="action">
+                <div id="action" class="border border-radius genre">
                     <div class="genre-image">
                         <img src="../images/action.jpg" alt="action" class="border border-radius">
                     </div>
                     <p>Action</p>
                 </div>
-                <div id="fantasy">
+                <div id="fantasy" class="border border-radius genre">
                     <div class="genre-image">
                         <img src="../images/fantasy.jpg" alt="fantasy" class="border border-radius">
                     </div>
                     <p>Fantasy</p>
                 </div>
-                <div id="sci-fi">
+                <div id="sci-fi" class="border border-radius genre">
                     <div class="genre-image">
                         <img src="../images/sc-fi.jpg" alt="sci-fi" class="border border-radius">
                     </div>
                     <p>Sci-Fi</p>
                 </div>
-                <div id="slice">
+                <div id="slice" class="border border-radius genre">
                     <div class="genre-image">
                         <img src="../images/slice-life.jpg" alt="slice-of-life" class="border border-radius">
                     </div>
                     <p>Slice Of Life</p>
                 </div>
-                <div id="biogr">
+                <div id="biogr" class="border border-radius genre">
                     <div class="genre-image">
                         <img src="../images/biography.jpg" alt="biography" class="border border-radius">
                     </div>
