Adding grid and removing flex-wrap

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="sections">
             <p class="text-shadow border heading">Genres: </p>
-            <div id="genre" class="flex flex-wrap">
+            <div id="genre" class="grid">
                 <div id="romance" class="border border-radius genre">
                     <div class="genre-image">
                         <img src="../images/romance.jpg" alt="romance" class="border border-radius">
