--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Book Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="class.css">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -36,39 +39,39 @@
             <div id="genre" class="grid">
                 <div id="romance" class="border border-radius genre">
                     <div class="genre-image">
-                        <img src="../images/romance.jpg" alt="romance" class="border border-radius">
+                        <img src="../images/romance.jpg" alt="romance" class=" border-radius">
                     </div>
-                    <p>Romance</p>
+                    <p class="flex">Romance</p>
                 </div>
                 <div id="action" class="border border-radius genre">
                     <div class="genre-image">
-                        <img src="../images/action.jpg" alt="action" class="border border-radius">
+                        <img src="../images/action.jpg" alt="action" class=" border-radius">
                     </div>
-                    <p>Action</p>
+                    <p class="flex">Action</p>
                 </div>
                 <div id="fantasy" class="border border-radius genre">
                     <div class="genre-image">
-                        <img src="../images/fantasy.jpg" alt="fantasy" class="border border-radius">
+                        <img src="../images/fantasy.jpg" alt="fantasy" class=" border-radius">
                     </div>
-                    <p>Fantasy</p>
+                    <p class="flex">Fantasy</p>
                 </div>
                 <div id="sci-fi" class="border border-radius genre">
                     <div class="genre-image">
-                        <img src="../images/sc-fi.jpg" alt="sci-fi" class="border border-radius">
+                        <img src="../images/sc-fi.jpg" alt="sci-fi" class=" border-radius">
                     </div>
-                    <p>Sci-Fi</p>
+                    <p class="flex">Sci-Fi</p>
                 </div>
                 <div id="slice" class="border border-radius genre">
                     <div class="genre-image">
-                        <img src="../images/slice-life.jpg" alt="slice-of-life" class="border border-radius">
+                        <img src="../images/slice-life.jpg" alt="slice-of-life" class=" border-radius">
                     </div>
-                    <p>Slice Of Life</p>
+                    <p class="flex">Slice Of Life</p>
                 </div>
                 <div id="biogr" class="border border-radius genre">
                     <div class="genre-image">
-                        <img src="../images/biography.jpg" alt="biography" class="border border-radius">
+                        <img src="../images/biography.jpg" alt="biography" class=" border-radius">
                     </div>
-                    <p>Biography</p>
+                    <p class="flex">Biography</p>
                 </div>
             </div>
             <div id="author-fav"></div>
