improving heading shadow

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,44 +35,56 @@
             </div>
         </div>
         <div id="sections">
-            <p class="text-shadow border heading">Genres: </p>
+            <p class="text-shadow-1 heading">Genres: </p>
             <div id="genre" class="grid">
-                <div id="romance" class="border border-radius genre">
-                    <div class="genre-image">
-                        <img src="../images/romance.jpg" alt="romance" class=" border-radius">
+                <button>
+                    <div id="romance" class="border border-radius genre">
+                        <div class="genre-image">
+                            <img src="../images/romance.jpg" alt="romance" class=" border-radius">
+                        </div>
+                        <p class="flex">Romance</p>
                     </div>
-                    <p class="flex">Romance</p>
-                </div>
-                <div id="action" class="border border-radius genre">
-                    <div class="genre-image">
-                        <img src="../images/action.jpg" alt="action" class=" border-radius">
+                </button>
+                <button>
+                    <div id="action" class="border border-radius genre">
+                        <div class="genre-image">
+                            <img src="../images/action.jpg" alt="action" class=" border-radius">
+                        </div>
+                        <p class="flex">Action</p>
                     </div>
-                    <p class="flex">Action</p>
-                </div>
-                <div id="fantasy" class="border border-radius genre">
-                    <div class="genre-image">
-                        <img src="../images/fantasy.jpg" alt="fantasy" class=" border-radius">
+                </button>
+                <button>
+                    <div id="fantasy" class="border border-radius genre">
+                        <div class="genre-image">
+                            <img src="../images/fantasy.jpg" alt="fantasy" class=" border-radius">
+                        </div>
+                        <p class="flex">Fantasy</p>
                     </div>
-                    <p class="flex">Fantasy</p>
-                </div>
-                <div id="sci-fi" class="border border-radius genre">
-                    <div class="genre-image">
-                        <img src="../images/sc-fi.jpg" alt="sci-fi" class=" border-radius">
+                </button>
+                <button>
+                    <div id="sci-fi" class="border border-radius genre">
+                        <div class="genre-image">
+                            <img src="../images/sc-fi.jpg" alt="sci-fi" class=" border-radius">
+                        </div>
+                        <p class="flex">Sci-Fi</p>
                     </div>
-                    <p class="flex">Sci-Fi</p>
-                </div>
-                <div id="slice" class="border border-radius genre">
-                    <div class="genre-image">
-                        <img src="../images/slice-life.jpg" alt="slice-of-life" class=" border-radius">
+                </button>
+                <button>
+                    <div id="slice" class="border border-radius genre">
+                        <div class="genre-image">
+                            <img src="../images/slice-life.jpg" alt="slice-of-life" class=" border-radius">
+                        </div>
+                        <p class="flex">Slice Of Life</p>
                     </div>
-                    <p class="flex">Slice Of Life</p>
-                </div>
-                <div id="biogr" class="border border-radius genre">
-                    <div class="genre-image">
-                        <img src="../images/biography.jpg" alt="biography" class=" border-radius">
+                </button>
+                <button>
+                    <div id="biogr" class="border border-radius genre">
+                        <div class="genre-image">
+                            <img src="../images/biography.jpg" alt="biography" class=" border-radius">
+                        </div>
+                        <p class="flex">Biography</p>
                     </div>
-                    <p class="flex">Biography</p>
-                </div>
+                </button>
             </div>
             <div id="author-fav"></div>
             <div id="top"></div>
