Some minor changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,18 +19,17 @@
             <img id="logo-picture" class="border border-radius" src="../images/logo.jpg" frameborder="0"></iframe>
         </div>
         <div id="inner-container" class="flex">
-            <div class="nav-elem flex border-radius text-shadow"><a href="./Pages/Login/login.html" target="_blank">
+            <div class="nav-elem box-shadow flex border-radius"><a href="./Pages/Login/login.html" target="_blank">
                     Log In</a>
             </div>
-            <div class="nav-elem flex border-radius text-shadow"><a href="./Pages/Catalogue/catalogue.html"
+            <div class="nav-elem box-shadow flex border-radius"><a href="./Pages/Catalogue/catalogue.html"
                     target="_blank">
                     Catalogue Page</a>
             </div>
-            <div class="nav-elem flex border-radius text-shadow"><a href="./Pages/Registration/reg.html"
-                    target="_blank">
+            <div class="nav-elem box-shadow flex border-radius"><a href="./Pages/Registration/reg.html" target="_blank">
                     Registration </a>
             </div>
-            <div class="nav-elem flex border-radius text-shadow"><a href="./Pages/About/about.html" target="_blank">
+            <div class="nav-elem box-shadow flex border-radius"><a href="./Pages/About/about.html" target="_blank">
                     About Us</a>
             </div>
         </div>
