--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,8 +15,11 @@
 <body>
     <div class="outer-container">
         <div id="home" class="flex">
-            <div id="logo" class="border border-radius flex">The Ink Spot</div>
-            <img id="logo-picture" class="border border-radius" src="../images/logo.jpg" frameborder="0"></iframe>
+            <button onclick="window.location.href='/frontend/';">
+                <div id="logo" class="border border-radius flex">The Ink Spot</div>
+            </button>
+            <button onclick="window.location.href='/frontend/';"><img id="logo-picture" class="border border-radius"
+                    src="../images/logo.jpg" frameborder="0"></iframe></button>
         </div>
         <div id="inner-container" class="flex">
             <div class="nav-elem box-shadow flex border-radius"><a href="./Pages/Login/login.html" target="_blank">
