Adding new categories and some colors

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,76 @@
                     </div>
                 </button>
             </div>
-            <div id="author-fav"></div>
+            <p class="text-shadow-1 heading">Editor's choice: </p>
+            <div id="author-fav" class="grid">
+                <button>
+                    <div id="1" class="border border-radius genre">
+                        <div class=""></div>
+                        <p>1</p>
+                    </div>
+                </button>
+                <button>
+                    <div id="2" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>2</p>
+                    </div>
+                </button><button>
+                    <div id="3" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>3</p>
+                    </div>
+                </button><button>
+                    <div id="4" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>4</p>
+                    </div>
+                </button><button>
+                    <div id="5" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>5</p>
+                    </div>
+                </button><button>
+                    <div id="6" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>6</p>
+                    </div>
+                </button>
+            </div>
+            <p class="heading text-shadow-1">Top of the day</p>
+            <div id="top" class="grid">
+                <button>
+                    <div id="1" class="border border-radius genre">
+                        <div class=""></div>
+                        <p>1</p>
+                    </div>
+                </button>
+                <button>
+                    <div id="2" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>2</p>
+                    </div>
+                </button><button>
+                    <div id="3" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>3</p>
+                    </div>
+                </button><button>
+                    <div id="4" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>4</p>
+                    </div>
+                </button><button>
+                    <div id="5" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>5</p>
+                    </div>
+                </button><button>
+                    <div id="6" class="border border-radius genre">
+                        <div class="genre-image"></div>
+                        <p>6</p>
+                    </div>
+                </button>
+            </div>
             <div id="top"></div>
         </div>
     </div>
