--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="class.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index1.css">
+    <script type="module" src="./index.js"></script>
 </head>
 
 <body>
