Renaming card and adding event listener

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,7 +40,7 @@
         </div>
         <div id="sections">
             <p class="text-shadow-1 heading">Genres: </p>
-            <div id="genre" class="grid">
+            <div class="grid card">
                 <button>
                     <div id="romance" class="border border-radius genre">
                         <div class="genre-image">
@@ -91,7 +91,7 @@
                 </button>
             </div>
             <p class="text-shadow-1 heading">Editor's choice: </p>
-            <div id="author-fav" class="grid">
+            <div class="grid card">
                 <button>
                     <div id="1" class="border border-radius genre">
                         <div class=""></div>
@@ -126,7 +126,7 @@
                 </button>
             </div>
             <p class="heading text-shadow-1">Top of the day</p>
-            <div id="top" class="grid">
+            <div class="grid card">
                 <button>
                     <div id="1" class="border border-radius genre">
                         <div class=""></div>
